--- a/wwr/index.html
+++ b/wwr/index.html
@@ -37,6 +37,7 @@
             <img class="icon" src="https://cdn-icons-png.flaticon.com/512/119/119573.png" alt="river icon"  width="40" height="40">
             <h2>We Run Rivers to Relax</h2>
         </section>
+        <div id="background"></div>
         <section class="camping-card">
             <img class="card-img" src="https://www.eurekacamping.com/sites/eurekacamping_site/files/tent-camping-at-sunset.jpg" alt="tent in mountains" width="500" height="300">
             <img class="icon" src="https://image.shutterstock.com/z/stock-vector-forest-logo-icon-logo-about-camp-outdoor-adventures-logo-tourism-hiking-and-camping-labels-1021237843.jpg" alt="fire icon" width="40" height="40">
@@ -53,13 +54,13 @@
         <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
         <h3><a href="contactus.html">Contact Us</a></h3>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Facebook_f_logo_%282021%29.svg/2048px-Facebook_f_logo_%282021%29.svg.png" alt="fb icon" width="40" height="40">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="twitter icon" width="40" height="40">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="https://www.vhv.rs/dpng/d/78-781797_facebook-icons-png-transparent-png-download.png" alt="instagram icon" width="50" height="40">
             </a>
         </div>
